# ebi-ngff-challenge-samples

./: cli.py  ebi-ngff-challenge-samples.csv  ebi-ngff-images.yaml  pyproject.toml
